logs/res_6821539.err
Traceback (most recent call last):
  File "main.py", line 16, in <module>
    from engine import evaluate, train_one_epoch
  File "/home/zhiyilai/detr/engine.py", line 53
    def save_img_and_update_conf_acc_list(args, samples, outputs, targets, conf_acc_list, b_id, save_err_only=False, draw_err_only):
                                         ^
SyntaxError: non-default argument follows default argument
Traceback (most recent call last):
  File "/home/zhiyilai/miniconda3/envs/vt/lib/python3.7/runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "/home/zhiyilai/miniconda3/envs/vt/lib/python3.7/runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "/home/zhiyilai/miniconda3/envs/vt/lib/python3.7/site-packages/torch/distributed/launch.py", line 263, in <module>
    main()
  File "/home/zhiyilai/miniconda3/envs/vt/lib/python3.7/site-packages/torch/distributed/launch.py", line 259, in main
    cmd=cmd)
subprocess.CalledProcessError: Command '['/home/zhiyilai/miniconda3/envs/vt/bin/python', '-u', 'main.py', '--no_aux_loss', '--eval', '--save_res', '--backbone', 'resnet101', '--batch_size', '1', '--dilation', '--resume', 'https://dl.fbaipublicfiles.com/detr/detr-r101-dc5-a2e86def.pth', '--coco_path', '/mnt/nfs/scratch1/zhiyilai/coco', '--output_dir', '/mnt/nfs/scratch1/zhiyilai/comp/detr/coco/r101-dc5']' returned non-zero exit status 1.
